@@ -6,7 +6,9 @@ include::introduction.txt[]
 
 :leveloffset: 2
 
-include::ql/operators/index.txt[]
+include::operators.txt[]
+
+include::expressions.txt
 
 include::parameters.txt[]
 
