@@ -18,3 +18,4 @@ include::default-true-if-property-is-missing.txt[]
 include::default-false-if-property-is-missing.txt[]
 include::filter-on-null-values.txt[]
 include::filter-on-relationships.txt[]
+include::in-operator.txt[]
